<?xml version="1.0" encoding="utf-8"?>
<resources>

    <!-- Application -->
    <string name="hello">INT Post-Armageddon: fighting for your survival</string>
    <string name="app_name">INT Post-Armageddon</string>

   <!-- Menu -->
    <string name="menu_exit">Exit</string>
    
    <!-- Clues --> 
    <string name="clue1">This is the first clue</string>
    <string name="clue2">This is the second clue</string>
    <string name="clue3">This is the third clue</string>
    <string name="clue4">This is the forth clue</string>    
    <string name="clue5">This is the fifth clue</string>    
    
    <string name="check">Check</string>
    <string name="win">Win</string>
 
</resources>