<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >
	
	<LinearLayout
        android:orientation="vertical"
   		android:layout_width="match_parent"
   		android:layout_height="match_parent" >
        
    	<TextView
        	android:layout_width="fill_parent"
        	android:layout_height="wrap_content"
        	android:text="@string/clue1" />  
        	
    	<TextView
        	android:layout_width="fill_parent"
        	android:layout_height="wrap_content"
        	android:text="@string/clue2" />
    	
    	<TextView
        	android:layout_width="fill_parent"
        	android:layout_height="wrap_content"
        	android:text="@string/clue3" />  
        	
    	<TextView
        	android:layout_width="fill_parent"
        	android:layout_height="wrap_content"
        	android:text="@string/clue4" />   

    	<TextView
        	android:layout_width="fill_parent"
        	android:layout_height="wrap_content"
        	android:text="@string/clue5" />    		 	    	
    
    <EditText
        android:id="@+id/editText1"
        android:layout_width= "200dip"
        android:layout_height="wrap_content"
        android:singleLine="true"
        android:maxLength="45" 
        android:capitalize="none" 
        android:inputType="text">

        <requestFocus />
    </EditText>
    
	<Button 
	    android:layout_width="wrap_content"
    	android:layout_height="wrap_content" 
    	android:id="@+id/search_button"
    	android:text="@string/check"
    	android:onClick="myClickHandler" /> 
    	
	 <TextView
	    android:id="@+id/winText" 
      	android:layout_width="fill_parent"
       	android:layout_height="wrap_content"/>   

      	

       </LinearLayout>
</LinearLayout>